<resources>
    <string name="app_name">千山医生</string>
    <string name="user_text">账&#160;&#160;&#160;&#160;号:</string>
    <string name="user_name">请输入账号</string>
    <string name="pwd_text">密&#160;&#160;&#160;&#160;码:</string>
    <string name="password">请输入密码</string>
    <string name="login">登&#160;&#160;&#160;&#160;录</string>
    <string name="not_login">未&#160;登&#160;录</string>
    <string name="registered">注&#160;&#160;&#160;&#160;&#160;&#160;册</string>
    <string name="send">发&#160;&#160;&#160;&#160;送</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="go_back">返回</string>
    <string name="exit">退&#160;&#160;&#160;&#160;出</string>
    <string name="login_success">登陆成功</string>
    <string name="failed_login">登陆失败</string>
    <string name="scanning">正在扫描二维码</string>
    <string name="information">个人信息</string>
    <string name="user_manager">用户管理</string>
    <string name="user_infor">患者详情</string>
    <string name="Setting">关&#160;&#160;&#160;&#160;于</string>
    <string name="health_message">健康全信息</string>
    <string name="medication">用药记录</string>
    <string name="look_doctor">就医记录</string>
    <string name="QuestionnaireSurvey">问卷调查</string>
    <string name="QuestionnaireSurvey1">中医体质问卷</string>
    <string name="QuestionnaireSurvey2">心理问卷</string>
    <string name="QuestionnaireSurvey3">个人健康常规问卷</string>
    <string name="physical">体检报告</string>
    <string name="blood_sugar">血糖</string>
    <string name="routine_blood_test">血常规</string>
    <string name="function">甲功能</string>
    <string name="lipid_routine">血脂常规</string>
    <string name="health_report">健康私人报告</string>
    <string name="health_report_name">患者姓名</string>
    <string name="health_report_status">私人报告状态</string>
    <string name="health_work">操作</string>
    <string name="Service_regulations">服务条例</string>
    <string name="Function_introduction">功能介绍</string>
    <string name="Empty_cache_data">清空缓存</string>
    <string name="help">帮助</string>
    <string name="feeBack">反&#160;&#160;&#160;&#160;馈</string>
    <string name="fb_tv_content">反馈内容</string>
    <string name="fb_et_content">请输入反馈信息</string>
    <string name="i_want_say">请输入说说</string>
    <string name="user_mobile_name">请输入手机号</string>
    <string name="user_register_name">请输入6-18位数字和字母组合</string>
    <string name="register_name">请输入6位数字密码</string>
    <string name="get_security_code">获取验证码</string>
    <string name="me_security_code">请输入验证码</string>
    <string name="cb_xieyi">我已阅读并同意</string>
    <string name="me_password">请再次输入密码</string>
    <string name="tv_xieyi">《千山健康用户协议》</string>
    <string name="tv_xieyi_toast">请阅读并同意《千山健康用户协议》</string>
    <string name="name_is_not_allow_null">用户名不能为空</string>
    <string name="name_is_not_valid">请输入正确的手机号码</string>
    <string name="data_is_new">已经是最新数据了</string>
    <string name="data_is_load_over">加载完成</string>
    <string name="pwd_is_not_allow_null">密码不能为空</string>
    <string name="pwd_is_not_valid">密码格式不正确,请输入6-18位数字和字母组合</string>
    <string name="isContent">用户名不能为空</string>
    <string name="notContent">网络异常,请检查网络设置</string>
    <string name="isMobile">当前网络连接不稳定,数据加载缓慢,请稍候...</string>
    <string name="isWifi">当前网络是wifi连接</string>
    <string name="isMobileNet">当前网速较差,数据加载缓慢,请稍候...</string>
    <string name="no_internet">无网络连接</string>
    <string name="generic_server_down">连接服务器失败</string>
    <string name="generic_error">网络异常,请稍后再试</string>
    <string name="mobile_is_not_null">手机号码不能为空</string>
    <string name="score_is_not_null">验证码不能为空</string>
    <string name="pwd_not_equales_mepwd">两次密码不一致,请重新输入</string>
    <string name="me_pwd_is_not_allow_null">确认密码不能为空</string>
    <string name="title_alert">温馨提示</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="image">图片</string>
    <string name="all_image">所有图片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">无法启用系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="done">完成</string>
    <string name="done_with_count">完成(%1$d/%2$d)</string>
    <string name="image_index">%1$d/%2$d</string>
    <string name="deleted_a_photo">删除了一张图片</string>
    <string name="confirm_to_delete">确认删除？</string>
    <string name="yes">确定</string>
    <string name="undo">撤消</string>
    <string name="voice_chat">语音通话</string>
    <string name="video_chat">视频通话</string>
    <string name="address">位置</string>
    <string name="files">文件</string>
    <string name="videos">视频</string>
    <string name="images">图片</string>
    <string name="camera">拍照</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_prefix">[语音]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="video_call">[视频通话]</string>
    <string name="dynamic_expression">[动态表情]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="ease_user_remove">此用户已被移除</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="setting">设置</string>
    <string name="now_refresh_list">正在刷新联系人</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="save_new_nickname">保存</string>
    <string name="nickname_description">设置此昵称以后，在与iOS客户端demo聊天过程中，iOS一侧会显示此昵称而不是环信ID，如果对方使用安卓客户端则此设置不生效</string>
    <string name="group_chat">群聊</string>
    <string name="chat_room">聊天室</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="push_nick">iOS离线推送昵称</string>
    <string name="Current_version">当前版本</string>
    <string name="Not_Set">未设置</string>
    <string name="Upload_the_log">上传日志中</string>
    <string name="The_new_group_chat">新建群组</string>
    <string name="add_public_group_chat">添加公开群</string>
    <string name="add_public_chat_room">添加聊天室</string>
    <string name="group_name">群聊名称</string>
    <string name="Group_chat_profile">群聊简介</string>
    <string name="Whether_the_public">是否公开</string>
    <string name="Open_group_members_invited">开放群成员邀请</string>
    <string name="Open_group_chat">公开的群聊</string>
    <string name="blacklist">黑名单列表</string>
    <string name="Empty_the_chat_record">清空聊天记录</string>
    <string name="Shielding_of_the_message">屏蔽群消息</string>
    <string name="dismiss_group">解散群聊</string>
    <string name="Select_the_contact">选择联系人</string>
    <string name="Group_chat_information">群聊资料</string>
    <string name="Group_of_Lord">群主</string>
    <string name="Introduction">简介</string>
    <string name="To_join_the_chat">加入群聊</string>
    <string name="register">注册</string>
    <string name="confirmpassword">确认密码</string>
    <string name="downwaiting">正在下载文件请稍后</string>
    <string name="mute">静音</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">挂断</string>
    <string name="answer">接听</string>
    <string name="unable_to_connect">不能连接到服务器</string>
    <string name="newchat">新建聊天</string>
    <string name="agree">同意</string>
    <string name="Group_chat">群聊:</string>
    <string name="not_download">未下载:</string>
    <string name="Please_enter_a_username">请输入用户名</string>
    <string name="is_down_please_wait">正在下载视频请稍候</string>
    <string name="Exit_the_group_chat">退出群聊</string>
    <string name="all_members">所有成员</string>
    <string name="not_add_myself">不能添加自己</string>
    <string name="This_user_is_already_your_friend">此用户已是你的好友</string>
    <string name="Add_a_friend">加个好友呗</string>
    <string name="add_a_friend">请输入好友账号(仅支持数字)</string>
    <string name="add_friend_context">请输入添加好友原因(选填)</string>
    <string name="send_successful">发送请求成功,等待对方验证</string>
    <string name="Request_add_buddy_failure">请求添加好友失败:</string>
    <string name="Network_error">网络出错</string>
    <string name="please_check">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="Making_sure_your_location">正在确定你的位置...</string>
    <string name="expression">[表情]</string>
    <string name="Removed_from_the_failure">移出失败</string>
    <string name="be_removing">正在移出...</string>
    <string name="call_duration">通话时长</string>
    <string name="Refused">已拒绝</string>
    <string name="The_other_party_has_refused_to">对方已拒绝</string>
    <string name="The_other_is_not_online">对方不在线</string>
    <string name="The_other_is_on_the_phone">对方正在通话中</string>
    <string name="The_other_party_did_not_answer">对方未接听</string>
    <string name="did_not_answer">未接听</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="unable_to_get_loaction">无法获取到您的位置信息!</string>
    <string name="not_connect_to_server">尚未连接至服务器，请稍后重试</string>
    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="File_does_not_exist">文件不存在</string>
    <string name="The_file_is_not_greater_than_10_m">文件不能大于10M</string>
</resources>