<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent">
    <com.example.bjlz.qianshandoctor.views.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.example.bjlz.qianshandoctor.views.ClearEditText
            android:id="@+id/cdt_mobile"
            android:layout_width="0dp"
            android:inputType="phone"
            android:maxLength="11"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textColorHint="@color/gray"
            android:background="@color/transparent"
            android:layout_weight="1.0"
            android:textSize="16sp"
            android:hint="@string/user_mobile_name"
            android:layout_height="40dp" />
    </LinearLayout>
    <View
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/devide_line"
        android:layout_height="1dp"/>
    <LinearLayout
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.example.bjlz.qianshandoctor.views.ClearEditText
            android:id="@+id/cet_security_code"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:inputType="number"
            android:maxLength="6"
            android:textColorHint="@color/gray"
            android:layout_marginLeft="30dp"
            android:textSize="16sp"
            android:background="@color/transparent"
            android:hint="@string/me_security_code"
            android:layout_height="40dp"
           />
        <com.example.bjlz.qianshandoctor.views.TimeButton
            android:layout_width="wrap_content"
            android:id="@+id/get_security_code"
            android:layout_marginRight="30dp"
            android:textSize="15sp"
            android:text="@string/get_security_code"
            android:layout_height="40dp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/devide_line"
        android:layout_height="1dp"/>
    <LinearLayout
        android:id="@+id/ll_edit_pwd"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.example.bjlz.qianshandoctor.views.ClearEditText
            android:id="@+id/cdt_pwd"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:inputType="textPassword"
            android:maxLength="18"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/gray"
            android:hint="@string/register_name"
            android:layout_marginRight="30dp"
            android:background="@color/transparent"
            android:layout_height="40dp" />
        <View
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/devide_line"
            android:layout_height="1dp"/>
        <com.example.bjlz.qianshandoctor.views.ClearEditText
            android:id="@+id/cdt_me_pwd"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:maxLength="18"
            android:layout_marginRight="30dp"
            android:hint="@string/me_password"
            android:textColorHint="@color/gray"
            android:background="@color/transparent"
            android:layout_height="40dp" />
        <View
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/devide_line"
            android:layout_height="1dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_registered"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/registered"
        android:layout_width="200dp"
        android:layout_height="40dp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/cb_xie_yi"
            android:text="@string/cb_xieyi"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
        <TextView
            android:id="@+id/tv_xie_yi"
            android:text="@string/tv_xieyi"
            android:textColor="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>