<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent">
<com.example.bjlz.qianshandoctor.views.TitleBarView
    android:id="@+id/title_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

    <com.example.bjlz.qianshandoctor.views.ClearEditText
        android:id="@+id/cdt_add_friend"
        android:inputType="number"
        android:background="@drawable/register_phone_bg"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:hint="@string/add_a_friend"
        android:layout_height="40dp" />
    <com.example.bjlz.qianshandoctor.views.ClearEditText
        android:id="@+id/cdt_add_friend_context"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:minHeight="160dp"
        android:padding="5dp"
        android:gravity="left|top"
        android:hint="@string/add_friend_context"
        android:background="@drawable/register_phone_bg"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_add"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/add_friend"
        android:layout_width="160dp"
        android:layout_height="wrap_content" />
</LinearLayout>