<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent">
    <com.example.bjlz.qianshandoctor.views.TitleBarView
        android:id="@+id/title_bar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="220dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:text="@string/user_text"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <com.example.bjlz.qianshandoctor.views.ClearEditText
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColorHint="@color/devide_line"
                android:background="@android:color/transparent"
                android:id="@+id/user_name"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:singleLine="true"
                android:inputType="text"
                android:hint="@string/user_name"
                android:ellipsize="end"
                android:maxLength="15"
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </LinearLayout>
        <View
            android:layout_marginRight="50dp"
            android:layout_marginLeft="60dp"
            android:layout_width="match_parent"
            android:background="@color/devide_line"
            android:layout_height="1dp"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:text="@string/pwd_text"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <com.example.bjlz.qianshandoctor.views.ClearEditText
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:ellipsize="end"
                android:textColor="@color/black"
                android:maxLength="20"
                android:textColorHint="@color/devide_line"
                android:background="@android:color/transparent"
                android:id="@+id/user_password"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </LinearLayout>
        <View
            android:layout_marginRight="50dp"
            android:layout_marginLeft="60dp"
            android:background="@color/devide_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_registered"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:textSize="15sp"
            android:layout_marginLeft="15dp"
            android:gravity="left|center"
            android:text="@string/registered"
            android:background="@color/transparent"
            android:layout_height="40dp" />
        <Button
            android:visibility="invisible"
            android:id="@+id/btn_forget_pwd"
            android:layout_width="0dp"
            android:layout_marginRight="15dp"
            android:gravity="right|center"
            android:layout_weight="1.0"
            android:textSize="15sp"
            android:text="@string/forget_pwd"
            android:background="@color/transparent"
            android:layout_height="40dp" />

    </LinearLayout>

    <Button
        android:background="@color/devide_line"
        android:id="@+id/btn_login"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:text="@string/login"
        android:layout_height="40dp" />
    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboard_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:layout_marginTop="10dip"
        android:focusableInTouchMode="true"
        android:visibility="gone" />
</LinearLayout>