<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.example.bjlz.qianshandoctor.views.TitleBarView
        android:layout_width="match_parent"
        android:id="@+id/title_bar"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/blood_sugar"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/img_blood_sugar"
            android:layout_width="22dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@drawable/rightback" />
    </RelativeLayout>

    <View
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/devide_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/routine_blood_test"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/img_routine_blood_test"
            android:layout_width="22dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@drawable/rightback" />
    </RelativeLayout>

    <View
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/devide_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/function"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/img_function"
            android:layout_width="22dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@drawable/rightback" />
    </RelativeLayout>

    <View
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/devide_line" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/lipid_routine"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/img_lipid_routine"
            android:layout_width="22dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@drawable/rightback" />
    </RelativeLayout>
    <View
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/devide_line" />
</LinearLayout>